using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Const : MonoBehaviour
{
    public const string animMove = "isMove";
    public const string animDie = "isDie";
    public const string animDamaged = "isDamaged";
    public const string animIdle = "isIdle";
    public const string enemy = "Enemy";
    public const string player = "Player";
}
